@@ -1,5 +1,8 @@
 ChangeLog for Simple Python Fixed-Point Module
 
+14Jul14	- added improved expressions for computing exp(1) and log(2)
+	updated graph-based demos to use Matplotlib in place of Gnuplot
+
 19May09	- *** spfpm-1.0.1 released
 
 20Feb09	- patched FXnum constructor to check for overflows
